--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,3 +4,4 @@
       run: |
     npm install remark-cli remark-preset-lint-consistent
     npx remark . --use remark-preset-lint-consistent --frail
+    _underscore_
